Tela Viagem - Monitoramento

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "leaflet/dist/leaflet.css";
 
 /* Zera completamente os espaçamentos padrão do navegador */
 html,
